Adding screenshot and trying png again

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2873,7 +2873,7 @@
 /* Intro */
 
 	#intro {
-		background: url("images/overlay.png"), url("../../images/intro1.jpg");
+		background: url("images/overlay.png"), url("../../images/intro4.png");
 		background-size: 256px 256px, cover;
 		background-attachment: fixed, fixed;
 		background-position: top left, bottom center;
