--- a/assets/css/ie8.css
+++ b/assets/css/ie8.css
@@ -48,7 +48,7 @@
 
 	#intro {
 		-ms-behavior: url("assets/js/ie/backgroundsize.min.htc");
-		background: url("../../images/intro1.jpg");
+		background: url("../../images/intro4.png");
 		background-size: cover;
 	}
 
