--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2211,7 +2211,7 @@
 		input[type="reset"]:hover,
 		.button:hover,
 		button:hover {
-			background-color: #a8d5a3;
+			background-color: #ff4040;
 		}
 
 		input[type="button"]:active,
@@ -2219,7 +2219,7 @@
 		input[type="reset"]:active,
 		.button:active,
 		button:active {
-			background-color: #88b583;
+			background-color: #ff2626;
 		}
 
 		input[type="button"].style2,
