--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2077,7 +2077,7 @@
 		form input[type="password"]:focus,
 		form select:focus,
 		form textarea:focus {
-			border-color: #9ac8e9;
+			border-color: #ff4040;
 		}
 
 	form input[type="text"],
@@ -2154,7 +2154,7 @@
 		-webkit-transition: all 0.2s ease-in-out;
 		-ms-transition: all 0.2s ease-in-out;
 		transition: all 0.2s ease-in-out;
-		background-color: #98c593;
+		background-color: #ff2626;
 		border: 0;
 		border-radius: 3.5em;
 		color: #fff;
@@ -2219,7 +2219,7 @@
 		input[type="reset"]:active,
 		.button:active,
 		button:active {
-			background-color: #ff2626;
+			background-color: #ff4040;
 		}
 
 		input[type="button"].style2,
