Meet the artist

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2260,6 +2260,10 @@
 			padding: 3.5em 2.5em 3.5em 2.5em;
 		}
 
+		.box.style3 {
+			padding: 10.5em 2.5em 10.5em 2.5em;
+		}
+
 /* Main */
 
 	.main {
