Change navi bar

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2822,7 +2822,7 @@
 		left: 0;
 		top: 0;
 		width: 100%;
-		background: #bfbfbf
+		background: #b7b7b7
 		background: rgba(176, 176, 176, 0.95);
 		height: 3em;
 		line-height: 3em;
