--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2822,8 +2822,8 @@
 		left: 0;
 		top: 0;
 		width: 100%;
-		background: #b7b7b7;
-		background: rgba (183, 183, 183, 0.95);
+		background: #bebebe;
+		background: rgba (190, 190, 190, 0.95);
 		height: 3em;
 		line-height: 3em;
 		box-shadow: 0 0 0.15em 0 rgba(0, 0, 0, 0.1);
