Updating footer colour

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2980,7 +2980,7 @@
 		height: 5em;
 		line-height: 5em;
 		margin: 0;
-		background: #39454b;
+		background: #bebebe;
 		color: #999;
 		color: rgba(185, 186, 187, 0.5);
 		overflow: hidden;
