--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css?family=Source+Sans+Pro:300,900");
+@import url('https://fonts.googleapis.com/css2?family=Raleway:wght@300;900&family=Playfair+Display:wght@400;700&display=swap');
 @import url("font-awesome.min.css");
 
 /*
@@ -1802,7 +1802,7 @@
 	body {
 		background: #fff;
 		height: 100%;
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'Playfair Display', serif;
 		font-weight: 300;
 		font-size: 18pt;
 		line-height: 1.75em;
@@ -1822,7 +1822,7 @@
 		}
 
 	input, textarea, select {
-		font-family: 'Source Sans Pro', sans-serif;
+		font-family: 'Playfair Display', serif;
 		font-weight: 300;
 		font-size: 18pt;
 		line-height: 1.75em;
