Update main.css - updating nav ul li a to Raleway

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2875,6 +2875,7 @@
 					line-height: 3em;
 					padding: 0 0.5em 0 0.5em;
 					outline: 0;
+					font-family: 'Raleway', sans-serif;
 				}
 
 /* Intro */
