--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2875,7 +2875,7 @@
 					line-height: 3em;
 					padding: 0 0.5em 0 0.5em;
 					outline: 0;
-					font-family: 'Raleway', sans-serif;
+					font-family: 'Raleway', sans-serif; /* This font is updated to Raleway for the navigation headers */
 				}
 
 /* Intro */
