Update main.css - emailmeform font
Updating the font for the emailmeform

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2107,6 +2107,13 @@
 		border: 0;
 	}
 
+	/* EmailMeForm */
+	#emf_advertisement, 
+	#emf_advertisement font,
+	#emf_advertisement a {
+    	font-family: 'Playfair Display', serif !important;
+	}
+
 /* Table */
 
 	table {
