--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -2268,7 +2268,8 @@
 			padding: 1em 1em 1em 1em;
 			width: 60%;
     			max-width: 500px;
-    			margin: 0 auto;
+    			margin-left: auto; /* This pushes the box to the right */
+    			margin-right: 0;   /* This ensures the right edge aligns with its container */
 		}
 
 		.box.style3 {
