--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -190,7 +190,10 @@
 	}
 
 	@media screen and (max-width: 736px) {
-
+		 #intro .content.box.style2 {
+    		background-color: rgba(255, 255, 255, 1); /* Fully opaque white */
+		 }
+		
 		.container.\31 25\25 {
 			width: 100%;
 			max-width: 118.75%;
