--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -193,6 +193,10 @@
 		 #intro .content.box.style2 {
     		background-color: rgba(255, 255, 255, 1); /* Fully opaque white */
 		 }
+
+		#intro .content p {
+    		text-align: left !important;
+		}
 		
 		.container.\31 25\25 {
 			width: 100%;
