Update main.css - setting consistent width and padding for the welcome intro box

--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -248,6 +248,22 @@
 
 	}
 
+@media screen and (max-width: 1280px) {
+  #intro .content.box.style2 {
+    width: 380px !important;
+    max-width: 95% !important;
+    padding: 1.3em !important;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  #intro .content.box.style2 {
+    width: 360px !important;
+    max-width: 90% !important;
+    padding: 1.3em !important;
+  }
+}
+
 /* Grid */
 
 	.row {
