--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -192,6 +192,9 @@
 	@media screen and (max-width: 736px) {
 		 #intro .content.box.style2 {
     		background-color: rgba(255, 255, 255, 1); /* Fully opaque white */
+		width: 320px !important;
+		max-width: 95% !important;
+    		padding: 1.3em !important;
 		 }
 
 		#intro .content p {
