--- a/port/assets/css/main.css
+++ b/port/assets/css/main.css
@@ -241,6 +241,54 @@
 
 	}
 
+#intro .content.box.style2 > div {
+  display: flex !important;
+  align-items: center !important;
+  gap: 15px !important;
+  margin-bottom: 0 !important;
+  padding-right: 0 !important;
+}
+
+/* Make sure text is left-aligned consistently */
+#intro .content p {
+  text-align: left !important;
+  color: #39454b !important;
+}
+
+/* For iPad and similar tablet devices */
+@media screen and (min-width: 768px) and (max-width: 1024px) {
+  #intro .content.box.style2 {
+    width: 320px !important; 
+    max-width: 95% !important;
+    padding: 1.3em !important;
+  }
+}
+
+@media screen and (max-width: 1280px) {
+  #intro .content.box.style2 {
+    width: 320px !important;
+    max-width: 95% !important;
+    padding: 1.3em !important;
+  }
+}
+
+@media screen and (max-width: 1000px) {
+  #intro .content.box.style2 {
+    width: 320px !important;
+    max-width: 90% !important;
+    padding: 1.3em !important;
+  }
+}
+
+/* Intro box custom sizing for different screen sizes */
+@media screen and (min-width: 1281px) {
+  #intro .content.box.style2 {
+    width: 415px !important;
+    max-width: 95% !important;
+    padding: 1.3em !important;
+  }
+}
+
 /* Grid */
 
 	.row {
