--- a/port/assets/css/main.css
+++ b/port/assets/css/main.css
@@ -2319,6 +2319,9 @@
 
 		.box.style2 {
 			padding: 1em 1em 1em 1em;
+			width: 60%;
+			max-width: 500px;
+			margin: 0 auto;
 		}
 
 		.box.style3 {
