--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -3111,7 +3111,7 @@
 		-ms-box-sizing: content-box;
 		box-sizing: content-box;
 		background: #fff;
-		padding-bottom: 4.5em;
+		padding-bottom: 3.5em;
 		box-shadow: 0 0.1em 0.15em 0 rgba(0, 0, 0, 0.15);
 	}
 
@@ -3156,12 +3156,14 @@
 			left: 0;
 			background: #fff;
 			width: 100%;
-			height: 4.5em;
-			line-height: 1.5em;
-			text-align: center;
+			height: 3.5em;
+			display: flex;
+			align-items: center;
+			justify-content: center;
 			cursor: default;
 			z-index: 1;
 			font-size: 0.9em;
+			padding:0.1em;
 		}
 
 		.poptrox-popup .nav-next,
