--- a/port/assets/css/main.css
+++ b/port/assets/css/main.css
@@ -3150,11 +3150,15 @@
 			background: #fff;
 			width: 100%;
 			height: 3em;
-			line-height: 2.8em;
-			text-align: center;
+			display: flex;
+			align-items: center;
+			justify-content: center;
+			line-height: 1.2em;
 			cursor: default;
 			z-index: 1;
 			font-size: 0.9em;
+			padding:0.1em;
+			
 		}
 
 		.poptrox-popup .nav-next,
