--- a/port/assets/css/main.css
+++ b/port/assets/css/main.css
@@ -273,6 +273,32 @@
     max-width: 95% !important;
     padding: 1.3em !important;
   }
+	#header {
+		height: 3.5em;
+	}
+
+	#logo {
+		font-size:0.9em;
+		width:40%;
+		white-space: nowrap;
+		overflow: hidden;
+	}
+
+	#nav {
+		right: 0.5em;
+	}
+
+	#nav ul li {
+		font-size: 0.8em;
+		margin-left:0.4em;
+		margin-bottom: 0.3em;
+	}
+
+	#nav ul {
+		display: flex;
+		flex-wrap: wrap;
+		justify-content: flex-end;
+	}
 }
 
 @media screen and (max-width: 1280px) {
