--- a/port/assets/css/main.css
+++ b/port/assets/css/main.css
@@ -292,9 +292,13 @@
 
 	#nav ul li {
 		font-size: 0.75em;
-		margin-left:0.3em;
+		margin-left:0.1em;
 		padding-bottom: 0.5em;
 	}
+
+	#nav ul li a {
+    		padding: 0 0.2em; /* Reduce the horizontal padding inside each link */
+ 	}
 
 	#nav ul {
 		display: flex;
