--- a/port/assets/css/main.css
+++ b/port/assets/css/main.css
@@ -273,43 +273,11 @@
     max-width: 95% !important;
     padding: 1.3em !important;
   }
-	#header {
-		height: 3.8em;
-	}
-
-	#logo {
-		font-size:0.85em;
-		width:35%;
-		white-space: nowrap;
-		overflow: hidden;
-		left:0.5em;
-	}
 
 	#nav {
-		right: 0.3em;
-		top: 0.2em;
+		display: none;
 	}
 
-	#nav ul li {
-		font-size: 0.75em;
-		margin-left:0.1em;
-		padding-bottom: 0.5em;
-	}
-
-	#nav ul li a {
-    		padding: 0 0.2em; /* Reduce the horizontal padding inside each link */
- 	}
-
-	#nav ul {
-		display: flex;
-		flex-wrap: wrap;
-		justify-content: flex-end;
-		line-height: 1.5em;
-	}
-
-	#body {
-		padding-top: 3.8em;
-	}
 }
 
 @media screen and (max-width: 1280px) {
