--- a/port/assets/css/main.css
+++ b/port/assets/css/main.css
@@ -274,9 +274,13 @@
     padding: 1.3em !important;
   }
 
-	 #nav {
-    		display: none !important;
-  		}
+	 #logo {
+        background-color: red !important;
+    }
+    
+    #nav {
+        display: none !important;
+    }
 
 }
 
