--- a/port/assets/css/main.css
+++ b/port/assets/css/main.css
@@ -266,23 +266,6 @@
   color: #39454b !important;
 }
 
-/* For iPad and similar tablet devices */
-@media screen and (min-width: 768px) and (max-width: 1024px) {
-  #intro .content.box.style2 {
-    width: 260px !important; 
-    max-width: 95% !important;
-    padding: 1.3em !important;
-  }
-
-	 #logo {
-        background-color: red !important;
-    }
-    
-    #nav {
-        display: none !important;
-    }
-
-}
 
 @media screen and (max-width: 1280px) {
   #intro .content.box.style2 {
@@ -298,6 +281,24 @@
     max-width: 90% !important;
     padding: 1.3em !important;
   }
+}
+
+/* For iPad and similar tablet devices */
+@media screen and (min-width: 768px) {
+  #intro .content.box.style2 {
+    width: 260px !important; 
+    max-width: 95% !important;
+    padding: 1.3em !important;
+  }
+
+	#logo {
+        background-color: red !important;
+    }
+    
+    	#nav {
+        display: none !important;
+    }
+
 }
 
 /* Intro box custom sizing for different screen sizes */
