--- a/port/assets/css/main.css
+++ b/port/assets/css/main.css
@@ -188,7 +188,7 @@
 		}
 
 	}
-
+	/*For phone screens*/
 	@media screen and (max-width: 736px) {
 
 		#intro .content.box.style2 {
@@ -266,7 +266,7 @@
   color: #39454b !important;
 }
 
-
+/* For laptop screens */
 @media screen and (max-width: 1280px) {
   #intro .content.box.style2 {
     width: 300px !important;
@@ -274,7 +274,7 @@
     padding: 1.3em !important;
   }
 }
-
+/* For tablets */
 @media screen and (max-width: 1000px) {
   #intro .content.box.style2 {
     width: 320px !important;
@@ -283,15 +283,7 @@
   }
 }
 
-@media screen and (min-width: 768px) {
-  #intro .content.box.style2 {
-    width: 260px !important; 
-    max-width: 95% !important;
-    padding: 1.3em !important;
-  }
-
-}
-
+/* For Ipad mini */
 @media screen and (min-width: 576px) and (max-width: 768px) {
   #nav {
     display: none !important;
@@ -306,7 +298,7 @@
   }
 }
 
-
+/* For wide-screen monitors*/
 /* Intro box custom sizing for different screen sizes */
 @media screen and (min-width: 1281px) {
   #intro .content.box.style2 {
